Plugin-Schnittstelle ohne überflüssige Generics :|